# type-id-gen

./: Cargo.toml  README.md  index.html  index.scss
.github/workflows/: website.yml
src/: main.rs  welcome.html
